--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div>
       <h2>クラブ</h2>
       <div>
-        水泳部
+        プログラミング研究会,総合芸術部
       </div>
     </div>
 
     <div>
       <h2>趣味</h2>
       <div>
-        毎朝のYouTube
+        通学時間車内での読書,帰宅後のゲーム
       </div>
     </div>
   </div>
   <div class=footer>
-    20YY/MM/DD
+    2024/07/17
   </div>
 </body>
 </html>
