--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>1a班17番 ニックネーム</div>
+    <div>1a班17番 Rin_stu1117</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,9 +31,11 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        Scratchを使用し、線を書くプログラムを作成した。<br>
+        上の図のプログラムは、拡張機能である「ペン」を使用して、ペンの色とスプライトの座標を変えながら大きさの違う円を描いたものである。
         2.感想<br>
-        感想を自分で書く。<br>
+        ペン機能は活用次第で色々な図形が描画できるだろうと思うので、円以外の図形や模様も描画してみたい。
+        <br>
       </div>
     </div>
 
@@ -42,9 +44,12 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Scratchを使用し、ネコのスプライト(以下"Cat")を移動させ、落下してくるスプライト(以下"Crystal")を掴んでポイントを稼ぐゲームを作成した。<br>
+        上の図のプログラムは、Catをキーボードの右または左矢印キーで移動させ、ランダムで落下してくるCrystalを掴まえるごとにポイントが10増えるというゲームになっている。また、クリアコマンドなどは作成していないため、永遠にポイントを稼ぐことができる。
         2.感想<br>
-        かんそうかんそう<br>        
+        体験入学のときに触れた内容ではあったが、その時とはまた違う完成になったと思う。スプライトが移動時、方向転換した際に少し固まるのが気にかかるため、次の機会があれば修正を試みたい。<br>
+        1-1の図や1-2の図で示したプログラムも含め、久しぶりにScratchを触ってみて、改めてブロックでプログラムを簡単に組み立てることができるScratchというサイトの便利さは凄いのだと感じた。
+      
       </div>
     </div>
 
