--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>1a班17番 Rin_stu1117</div>
+    <div>1a班17番 omuct.stu_1117</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
