--- a/rep02.html
+++ b/rep02.html
@@ -30,7 +30,8 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        1週目と同様に2週目のレポートを作成した。
+      
         2.感想<br>
         かんそうかんそう<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
@@ -42,6 +43,7 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
+        Youtubeの動画＆TeachableMachine
         ないようないよう<br>
         2.感想<br>
         かんそうかんそう<br>        
