--- a/rep01.html
+++ b/rep01.html
@@ -34,7 +34,7 @@
         Scratchを使用し、線を書くプログラムを作成した。<br>
         上の図のプログラムは、拡張機能である「ペン」を使用して、ペンの色とスプライトの座標を変えながら大きさの違う円を描いたものである。<br>
         2.感想<br>
-        ペン機能は活用次第で色々な図形が描画できるだろうと思うので、円以外の図形や模様も描画してみたい。
+        ペン機能は活用次第で色々な図形が描画できるだろうと思うので、三角形や六角形、星形などの円以外の図形や模様も描画してみたい。また、描画した図形を動かす(回転・左右に移動などする)アニメーションは作成できるのか試してみたいと思った。
         <br>
       </div>
     </div>
