--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class=main>
     <div>
-      <h2>クラブ</h2>
+      <h2>部活動</h2>
       <div>
         プログラミング研究会,総合芸術部
       </div>
@@ -35,7 +35,7 @@
     <div>
       <h2>趣味</h2>
       <div>
-        通学時間車内での読書,帰宅後のゲーム
+        読書
       </div>
     </div>
   </div>
