--- a/rep01.html
+++ b/rep01.html
@@ -62,7 +62,7 @@
         <a href="https://itomaU.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いてHTMLの体験とともに自身のホームページを作成した。<br>
-        なお、今回は「部活動」の欄と「趣味」の欄を作成し内容を記入した。
+        なお、今回は「部活動」の欄と「趣味」の欄について内容を記入した。
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
