--- a/rep01.html
+++ b/rep01.html
@@ -62,7 +62,7 @@
         <a href="https://itomaU.github.io/web/">私のホームページ</a><br>
         1.内容<br>
         Githubを用いてHTMLの体験とともに自身のホームページを作成した。<br>
-        なお、今回は「部活動」の欄と「趣味」の欄について内容を記入した。
+        なお、今回は「部活動」の欄と「趣味」の欄について内容を記入した。<br>
         2.感想<br>
         Githubに触れたのは今回が初ではなかったが、今回のようにHTMLファイルを書き換えたり、Githubを通して自身のホームページを作成し開くという経験はしたことがなかったのでとても面白かった。<br>        
       </div>      
