--- a/rep01.html
+++ b/rep01.html
@@ -64,7 +64,8 @@
         Githubを用いてHTMLの体験とともに自身のホームページを作成した。<br>
         なお、今回は「部活動」の欄と「趣味」の欄について内容を記入した。<br>
         2.感想<br>
-        Githubに触れたのは今回が初ではなかったが、今回のようにHTMLファイルを書き換えたり、Githubを通して自身のホームページを作成し開くという経験はしたことがなかったのでとても面白かった。<br>        
+        Githubに触れたのは今回が初ではなかったが、今回のようにHTMLファイルを書き換えたり、Githubを通して自身のホームページを作成して開くという経験はしたことがなかったので、とても面白かった。<br> 
+        機会があれば今回の実習のようにGithubとHTML(＋CSSなど)を活用してより本格的なホームページを作ってみようと思う。<br>
       </div>      
     </div>
 
