--- a/rep03.html
+++ b/rep03.html
@@ -31,7 +31,7 @@
       <a href="https://itomaU.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        A-FrameとWebプログラミング道場のサイト<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
