--- a/rep02.html
+++ b/rep02.html
@@ -30,10 +30,12 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        1週目と同様に2週目のレポートを作成した。<br>
+        1週目と同様に2週目のレポートを作成した。2週目のレポートの作成が完了次第、1週目のレポートの仕上げを行った。<br>
         2.感想<br>
-        かんそうかんそう<br>
-        3. 2週目が完成した人は1週目のレポートも完成させる<br>
+        1週目と同様にレポートを作成したのだが、前週よりも書き込みやコミットをスムーズに進められてとても良かったと思う。<br>
+        png形式の写真のアップロードも戸惑うことなくできたため、成長を感じて嬉しかった。<br>
+        3.2週目が完成した人は1週目のレポートも完成させる
+      <br>
       </div>
     </div>
 
