--- a/rep02.html
+++ b/rep02.html
@@ -57,9 +57,10 @@
       <img src="roblox.png" alt="RBLX" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        WorkroomsとRobloxを用いてそれぞれのVR空間でVR体験を行った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        WorkroomsはVR空間内で自分の音声をミュートできたり画面共有できたりと、その名の通りリモートワーク向けにとても使いやすく作られているのだと感じた。<br>
+        操作も比較的簡単だと感じたので、環境さえ整っていればすぐに操作に慣れることができそうだということも素晴らしいと思う。<br>またアバターに自由性があるのも社会的な多様性に柔軟に対応できるだろうと感じたのでとても良い機能だと思った。<br>
       </div>
     </div>
     
