--- a/rep02.html
+++ b/rep02.html
@@ -44,7 +44,7 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        Youtubeの動画＆TeachableMachine
+        松尾教授の生成AIについての動画視聴とTeachableMachineを用いた機械学習
         ないようないよう<br>
         2.感想<br>
         かんそうかんそう<br>        
