--- a/rep02.html
+++ b/rep02.html
@@ -44,10 +44,12 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        松尾教授の生成AIについての動画視聴とTeachableMachineを用いた機械学習
-        ないようないよう<br>
+        松尾教授の生成AIについての動画視聴とTeachableMachineを用いた機械学習<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ・動画の感想<br>        
+
+        ・TeachableMachineの感想
+        
       </div>
     </div>
     
@@ -59,11 +61,11 @@
         1.内容<br>
         WorkroomsとRobloxを用いてそれぞれのVR空間でVR体験を行った。<br>
         2.感想<br>
-        ・Workroomsの感想
+        ・Workroomsの感想<br>
         Workroomsについて、VR空間内で自分の音声をミュートできたり画面共有できたりと、その名の通りリモートワーク向けにとても使いやすく作られているのだと感じた。<br>
         操作も比較的簡単だと感じたので、環境さえ整っていればすぐに操作に慣れることができそうだということも素晴らしいと思う。<br>
         またアバターに自由性があるのも社会的な多様性に柔軟に対応できるだろうと感じたのでとても良い機能だと思った。<br>
-        ・Robloxの感想
+        ・Robloxの感想<br>
         Robloxについて、私は残念ながら途中でVR酔い(=乗り物酔いに近い症状)を起こしてしまったためあまりじっくりVR空間を体験することはできなかった。<br>
         しかし実際にアバターを通して動いてみて、VRゴーグルも初めて使用してみて、とても本格的に体験できて楽しかった。<br>
         同時にプレイしていたクラスメイトと同じVR空間内で一緒に遊べるという技術の凄さを改めて実感した。<br>
