--- a/rep02.html
+++ b/rep02.html
@@ -47,9 +47,10 @@
         松尾教授の生成AIについての動画視聴とTeachableMachineを用いた機械学習<br>
         2.感想<br>
         ・動画の感想<br>        
-
-        ・TeachableMachineの感想
-        
+        AIについてスライドを通して簡単にかみ砕いて説明されていたり、用語の整理などもあったためとても理解しやすく、楽しく動画を視聴できた。<br> 
+        ・TeachableMachineの感想<br> 
+        TeachableMachineは以前触ったことがあったが、100枚程度の画像学習ではあまり正確な答えは出力できないことから、今回改めて機械学習の際には膨大な量のデータが必要であることを実感した。<br> 
+        また、手の情報というのは男女でも人種でも違い人それぞれであるため、自分の手の情報だけではまだまだ情報として足りないのだと思った。<br> 
       </div>
     </div>
     
