--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,11 @@
       <a href="https://itomaU.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        A-FrameとWebプログラミング道場のサイト<br>
+        A-FrameとWebプログラミング道場のサイトを活用して、JavaScriptで３次元空間を自作した。<br>
+        今回は木のようなものと図形を組み合わせて空間に配置してみている。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        まずWeb内で手軽にプログラミングできることに驚いた。アプリなしに気楽にプログラミングを始めることができ、すぐに作成したコードを実行できるためとても良いと思う。<br>
+        プログラムを書いてみて、立体図形の座標指定には苦戦したが、面白い世界が作れて楽しかった。<br>
       </div>
     </div>
     <div>
@@ -42,7 +44,7 @@
       <a href="https://itomaU.github.io/web/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Webプログラミング道場のサイトを活用して、JavaScriptで伝言プログラムを作成した。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
