--- a/rep03.html
+++ b/rep03.html
@@ -34,7 +34,7 @@
         A-FrameとWebプログラミング道場のサイトを活用して、JavaScriptで３次元空間を自作した。<br>
         今回は木のようなものと図形を組み合わせて空間に配置してみている。<br>
         2.感想<br>
-        まずWeb内で手軽にプログラミングできることに驚いた。アプリなしに気楽にプログラミングを始めることができ、すぐに作成したコードを実行できるためとても良いと思う。<br>
+        まずWeb内で手軽にプログラミングできることに驚いた。アプリなしに気楽にプログラミングを始めることができ、すぐに作成したプログラムを実行できるためとても良いと思う。<br>
         プログラムを書いてみて、立体図形の座標指定には苦戦したが、面白い世界が作れて楽しかった。<br>
       </div>
     </div>
@@ -46,7 +46,8 @@
         1.内容<br>
         Webプログラミング道場のサイトを活用して、JavaScriptで伝言プログラムを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        今回JavaScriptでプログラムを書いてみて、これまで触ったことのあるPythonとは大分プログラムの書き方が違うのだと思った。しかしifやelseなど見覚えのある命令構文もあったためか、特に躓くことなくプログラムを書き終えることができてよかった。<br>
+        実際にプログラムを実行してみて上手く動いたときはとても達成感があった。<br>
       </div>
     </div>
 
@@ -55,9 +56,10 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+        ３次元空間をVRゴーグルとコントローラを用いて体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        VR空間にて一人称視点で３次元空間を体験してみて、目の前にある立体図形を持ってみたり、自分自身から結構な数の球体を射出してみたりととても面白かった。<br>
+        今回体験した３次元空間は、立体図形がある場所から一定の距離離れてしまうと真っ白の世界になってしまう(振り返って元に戻れはする)ようだったので、もっと大規模な構造物などを作成して街と言えるくらい大きな空間をいつか自作してみたいと思った。<br>
       </div>
     </div>
   
